[package]
name = "atm-io-utils"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Utilities for implementing and testing std::io and tokio_io related code."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/AljoschaMeyer/atm-io-utils"

[dependencies]
