[package]
name = "atm-io-utils"
version = "0.2.5"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Utilities for implementing and testing std::io and tokio_io related code."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/AljoschaMeyer/atm-io-utils"

[dependencies]
futures-core-preview = "0.3.0-alpha.13"
futures-io-preview = "0.3.0-alpha.13"
quickcheck = { version = "0.6", optional = true }

[package.metadata.docs.rs]
features = ["quickcheck"]
